# RAG_Bootcamp

./: 2-data_parsing_pdf.ipynb  README.md  main.py  pyproject.toml  requirements.txt
0-Data_Ingest_Parsing/: 1-data_ingestion.ipynb  2-data_parsing_pdf.ipynb  dataparsingdoc.ipynb
0-Data_Ingest_Parsing/data/: machine_learning.txt
0-Data_Ingest_Parsing/data/text_files/: pyhton_intro.txt
