[project]
name = "rag-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==1.0.17",
    "docx2txt==0.9",
    "faiss-cpu==1.12.0",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-core==0.3.74",
    "langchain-groq==0.3.7",
    "langchain-openai==0.3.30",
    "lxml==6.0.1",
    "pandas==2.3.1",
    "pymupdf>=1.26.3",
    "pypdf==6.0.0",
    "python-docx==1.2.0",
    "python-dotenv==1.1.1",
    "sentence-transformers==5.1.0",
    "tiktoken==0.11.0",
    "unstructured[docx]>=0.18.13",
]
